| Summary: | ASTERISK-26740: voicemail API test: uses varlibdir instead of datadir for a sound file | ||
| Reporter: | Tzafrir Cohen (tzafrir) | Labels: | |
| Date Opened: | 2017-01-21 14:42:48.000-0600 | Date Closed: | 2017-01-27 12:44:58.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Tests/General |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The voicemail API test symlinks beep.gsm from ast_config_AST_VAR_DIR. It should use ast_config_AST_DATA_DIR. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-01-21 14:42:50.007-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-01-27 12:44:59.193-0600 Change 4755 merged by zuul: tests: use datadir for sound files [https://gerrit.asterisk.org/4755|https://gerrit.asterisk.org/4755] By: Friendly Automation (friendly-automation) 2017-01-27 14:51:19.196-0600 Change 4778 merged by zuul: tests: use datadir for sound files [https://gerrit.asterisk.org/4778|https://gerrit.asterisk.org/4778] By: Friendly Automation (friendly-automation) 2017-01-27 14:51:54.145-0600 Change 4777 merged by George Joseph: tests: use datadir for sound files [https://gerrit.asterisk.org/4777|https://gerrit.asterisk.org/4777] | ||